@@ -72,46 +72,46 @@ opts.Add('customSHLINKFLAGS')
 opts.Add('customSWIGFLAGS')
 opts.Add('useDouble', 
     'Set to 1 to use double-precision floating point for audio samples.', 
-    0)
+    '0')
 opts.Add('usePortAudio', 
     'Set to 1 to use PortAudio for real-time audio input and output.', 
-    1)
+    '1')
 opts.Add('useJack',
     'Set to 1 if you compiled PortAudio to use Jack',
-    1)
+    '1')
 opts.Add('useFLTK', 
     'Set to 1 to use FLTK for graphs and widget opcodes.', 
-    1)
+    '1')
 opts.Add('buildCsoundVST', 
     'Set to 1 to build CsoundVST (needs FLTK, boost, Python 2.3, SWIG).', 
-    1)
+    '1')
 opts.Add('noCygwin',
     'Set to 1 to build with -mno-cygwin when using Cygwin',
-    0)
+    '0')
 opts.Add('generateTags',
     'Set to 1 to generate TAGS',
-    0)
+    '0')
 opts.Add('generatePdf',
     'Set to 1 to generate PDF documentation',
-    0)
+    '0')
 opts.Add('makeDynamic',
     'Set to 1 to generate dynamically linked programs',
-    1)
+    '1')
 opts.Add('generateXmg',
     'Set to 1 to generate string database',
-    1)
+    '1')
 opts.Add('generateZip',
     'Set to 1 to generate zip archive',
-    0)
+    '0')
 opts.Add('buildLoris',
     'Set to 1 to build the Loris Python extension and opcodes',
-    1)
+    '1')
 opts.Add('prefix',
     'Base directory for installs.  Defaults to /usr/local.',
     '/usr/local')
 opts.Add('usePortMIDI',
     'Use portmidi library rather than internal MIDI (experimental).',
-    0)
+    '0')
 
 # Define the common part of the build environment.
 # This section also sets up customized options for third-party libraries, which
@@ -149,11 +149,11 @@ commonEnvironment.Prepend(LIBPATH = ['.', '#.'])
 commonEnvironment.Prepend(CPPFLAGS = ['-DBETA'])
 commonEnvironment.Prepend(LIBPATH = ['.', '#.', '/usr/lib', '/usr/local/lib'])
 
-if commonEnvironment['useDouble']:
+if (commonEnvironment['useDouble']=='0'):
+    print 'CONFIGURATION DECISION: Using single-precision floating point for audio samples.'
+else:
     print 'CONFIGURATION DECISION: Using double-precision floating point for audio samples.'
     commonEnvironment.Append(CPPFLAGS = ['-DUSE_DOUBLE'])
-else:
-    print 'CONFIGURATION DECISION: Using single-precision floating point for audio samples.'
 
 # Define different build environments for different types of targets.
 
@@ -179,15 +179,15 @@ elif getPlatform() == 'mingw' or getPlatform() == 'cygwin':
     commonEnvironment.Append(CCFLAGS = "-mthreads")
     #commonEnvironment.Append(CCFLAGS = "-mtune=pentium4")
     
-if (commonEnvironment['makeDynamic'] == 0) and (getPlatform() != 'linux') and (getPlatform() != 'darwin'):
-    commonEnvironment.Append(LINKFLAGS = '-static')
-else:
+if (commonEnvironment['makeDynamic'] == '1') or (getPlatform() == 'linux') or (getPlatform() == 'darwin'):
     if (getPlatform() == 'linux'):
         commonEnvironment.Append(LINKFLAGS = Split('-Wl,-Bdynamic'))
+else:
+    commonEnvironment.Append(LINKFLAGS = '-static')
 
 # Adding libraries and flags if using -mno-cygwin with cygwin
 
-if (commonEnvironment['noCygwin'] == 1 and getPlatform() == 'cygwin'):
+if (commonEnvironment['noCygwin'] == '1' and getPlatform() == 'cygwin'):
     print 'CONFIGURATION DECISION: Using -mno-cygwin.'
     commonEnvironment.Prepend(CCFLAGS = ['-mno-cygwin'])
     commonEnvironment.Prepend(CPPFLAGS = ['-mno-cygwin'])
@@ -330,7 +330,7 @@ if vstEnvironment.ParseConfig('fltk-config --use-images --cflags --cxxflags --ld
 
 guiProgramEnvironment = commonEnvironment.Copy()
 
-if commonEnvironment['usePortAudio'] and portaudioFound:
+if commonEnvironment['usePortAudio']=='1' and portaudioFound:
     staticLibraryEnvironment.Append(CCFLAGS = '-DRTAUDIO')
     pluginEnvironment.Append(CCFLAGS = '-DRTAUDIO')
     csoundProgramEnvironment.Append(CCFLAGS = '-DRTAUDIO')
@@ -343,7 +343,7 @@ if commonEnvironment['usePortAudio'] and portaudioFound:
     if (getPlatform() == 'linux'): 
         csoundProgramEnvironment.Append(LIBS = ['asound'])
         vstEnvironment.Append(LIBS = ['asound'])
-        if (commonEnvironment['useJack']==1):
+        if (commonEnvironment['useJack']=='1'):
             print "Adding Jack library for PortAudio"
             csoundProgramEnvironment.Append(LIBS = ['jack'])
             vstEnvironment.Append(LIBS = ['jack'])  
@@ -353,7 +353,7 @@ if commonEnvironment['usePortAudio'] and portaudioFound:
         csoundProgramEnvironment.Append(LIBS = ['dsound'])
         vstEnvironment.Append(LIBS = ['dsound'])
 
-if (commonEnvironment['useFLTK'] == 1 and fltkFound):
+if (commonEnvironment['useFLTK'] == '1' and fltkFound):
     staticLibraryEnvironment.Append(CCFLAGS = '-DWINDOWS')
     pluginEnvironment.Append(CCFLAGS = '-DWINDOWS')
     csoundProgramEnvironment.Append(CCFLAGS = '-DWINDOWS')
@@ -391,7 +391,7 @@ if (commonEnvironment['useFLTK'] == 1 and fltkFound):
             guiProgramEnvironment.Append(LIBS = ['stdc++', 'pthread', 'm'])
             csoundProgramEnvironment.Append(LINKFLAGS = ['-framework', 'Carbon'])
 
-if (commonEnvironment['usePortMIDI'] and portmidiFound):
+if (not(commonEnvironment['usePortMIDI']=='0') and portmidiFound):
     print 'Adding PortMIDI flags and libs'
     staticLibraryEnvironment.Append(CCFLAGS = '-DPORTMIDI')
     pluginEnvironment.Append(CCFLAGS = '-DPORTMIDI')
@@ -525,14 +525,14 @@ Top/sndinfo.c
 Top/threads.c
 ''')
 
-if not ((commonEnvironment['usePortAudio']==1) and portaudioFound):
+if not ((commonEnvironment['usePortAudio']=='1') and portaudioFound):
     print 'CONFIGURATION DECISION: Not building with PortAudio.'
 else:
     print 'CONFIGURATION DECISION: Building with PortAudio.'
     libCsoundSources.append('InOut/rtpa.c')
     libCsoundSources.append('InOut/pa_blocking.c')
 
-if ((commonEnvironment['usePortMIDI']) and (portmidiFound==1)):
+if (not (commonEnvironment['usePortMIDI']=='0')) and portmidiFound:
     print 'CONFIGURATION DECISION: Building with PortMIDI.'
     libCsoundSources.append('InOut/pmidi.c')
     libCsoundSources.append('InOut/fmidi.c')
@@ -540,7 +540,7 @@ else:
     print 'CONFIGURATION DECISION: Building with internal MIDI.'
     libCsoundSources.append('OOps/midirecv.c')
 
-if not ((commonEnvironment['useFLTK'] == 1 and fltkFound)):
+if not ((commonEnvironment['useFLTK'] == '1' and fltkFound)):
     print 'CONFIGURATION DECISION: Not building with FLTK for graphs and widgets.'
 else:
     print 'CONFIGURATION DECISION: Building with FLTK for graphs and widgets.'
@@ -552,7 +552,7 @@ staticLibrary = staticLibraryEnvironment.Library('csound',
     libCsoundSources)
 zipDependencies.append(staticLibrary)
     
-if commonEnvironment['generatePdf']==0:
+if commonEnvironment['generatePdf']=='0':
     print 'CONFIGURATION DECISION: Not generating PDF documentation.'
 else:
     print 'CONFIGURATION DECISION: Generating PDF documentation.'
@@ -839,7 +839,7 @@ executables.append(ustubProgramEnvironment.Program('srconv',
 executables.append(csoundProgramEnvironment.Program('csound', 
     ['frontends/csound/csound_main.c']))
     
-if not ((commonEnvironment['buildCsoundVST'] == 1) and boostFound and fltkFound):
+if not ((commonEnvironment['buildCsoundVST'] == '1') and boostFound and fltkFound):
     print 'CONFIGURATION DECISION: Not building CsoundVST plugin and standalone.'
 else:
     print 'CONFIGURATION DECISION: Building CsoundVST plugin and standalone.'
@@ -939,7 +939,7 @@ else:
     # Build the Loris and Python opcodes here because they depend 
     # on the same things as CsoundVST.
     
-    if commonEnvironment['buildLoris']:
+    if commonEnvironment['buildLoris']=='1':
         # For Loris, we build only the loris Python extension module and
         # the Csound opcodes (modified for Csound 5).
         # It is assumed that you have copied the contents of the Loris distribution
@@ -978,7 +978,7 @@ else:
     Depends(py, csoundvst)
     pluginLibraries.append(py)
 
-if not ((commonEnvironment['generateTags']==1) and (getPlatform() == 'linux' or getPlatform() == 'cygwin')):
+if (commonEnvironment['generateTags']=='0') or (getPlatform() != 'linux' and getPlatform() != 'cygwin'):
     print "CONFIGURATION DECISION: Not calling TAGS"
 else:
     print "CONFIGURATION DECISION: Calling TAGS"
@@ -991,9 +991,7 @@ else:
     zipDependencies.append(tags)
     Depends(tags, staticLibrary)
 
-if commonEnvironment['generateXmg']==0:
-    print "CONFIGURATION DECISION: Not calling makedb"
-else:
+if commonEnvironment['generateXmg']=='1':
     print "CONFIGURATION DECISION: Calling makedb"
     if getPlatform() == 'mingw':
         xmgs = commonEnvironment.Command('American.xmg', ['strings/all_strings'], 'makedb strings/all_strings American')
@@ -1009,12 +1007,14 @@ else:
     zipDependencies.append(xmgs1)
     Depends(xmgs2, makedb)
     zipDependencies.append(xmgs2)
+else:
+    print "CONFIGURATION DECISION: Not calling makedb"
 
 
 zipDependencies += executables
 zipDependencies += pluginLibraries
   
-if not (commonEnvironment['generateZip']):    
+if (commonEnvironment['generateZip']=='0'):    
     print 'CONFIGURATION DECISION: Not compiling zip file for release.'
 else:
     print 'CONFIGURATION DECISION: Compiling zip file for release.'
